# vendor_openvela

./: .gitattributes
.github/: CODEOWNERS
boards/: .gitignore
boards/common/: CMakeLists.txt  Make.defs  Makefile
boards/common/etc/: uikit_video_config.json
boards/common/etc/dbus-1/: system.conf
boards/common/etc/miplay/: mico_config
boards/common/etc/ofono/: phonesim.conf
boards/common/etc/wifi/: bss
boards/common/include/: board.h  lcd.h  nsh_romfsimg.h
boards/common/sharedata/media/: README
boards/common/src/: CMakeLists.txt  Makefile  board.h  qemu_initialize.c  qemu_weakfunc.c
boards/vela/: CMakeLists.txt  Kconfig
boards/vela/configs/goldfish-arm64-v8a-ap/: defconfig
boards/vela/configs/goldfish-armeabi-v7a-ap/: defconfig
boards/vela/configs/goldfish-armeabi-v7a-ap-citest/: defconfig
boards/vela/configs/goldfish-x86_64-ap/: defconfig
boards/vela/configs/qemu-arm64-v8a-ap/: defconfig
boards/vela/configs/qemu-arm64-v8a-server/: defconfig
boards/vela/configs/qemu-armeabi-v7a-ap/: defconfig
boards/vela/configs/qemu-armeabi-v7a-bl/: defconfig
boards/vela/configs/qemu-armeabi-v7a-cmake/: defconfig
boards/vela/configs/qemu-armeabi-v7a-server/: defconfig
boards/vela/configs/qemu-armeabi-v7a-tee/: defconfig
boards/vela/configs/qemu-armeabi-v8m-ap/: defconfig
boards/vela/include/: board.h
boards/vela/prebuilts/image/: data.img  system.img
boards/vela/prebuilts/tools/: run_emulator.sh
boards/vela/prebuilts/tools/modem_simulator/: iccprofile_for_sim0.xml  modem_nvram.json
boards/vela/prebuilts/tools/xiaomi_smart_screen_10/: layout
boards/vela/scripts/: Make.defs  dramboot_armv8a.ld  flashboot_armv8m.ld  link.ld  qemu.ld
boards/vela/src/: CMakeLists.txt  Makefile  qemu_appinit.c  qemu_boardctl.c  qemu_boot.c  qemu_lowputc.c  qemu_vela.c
boards/vela/src/etc/: build.prop  package.cfg
boards/vela/src/etc/dbus-1/: system.conf
boards/vela/src/etc/init.d/: rc.sysinit  rcS  rcS.first  rcS.last
boards/vela/src/etc/media/: criteria.txt  graph.conf  graph_vela.conf  graph_vtun.conf  media_focus.conf  settings.pfw
boards/vela/src/etc/mobile-broadband-provider-info/: serviceproviders.xml
